# reversible-redaction

./: README.md  pyproject.toml
docs/: PRD.md  security-boundaries.md  skill-usage.md
docs/plans/: 2026-03-27-reversible-redaction-phase-1.md  2026-03-27-reversible-redaction-phase-2.md
examples/: input.txt  mapping.example.json  redacted-example.txt
skills/reversible-redaction/: SKILL.md
src/reversible_redaction/: cli.py  mapping.py  redactor.py  restore.py  scanner.py
tests/: test_cli.py  test_examples.py  test_imports.py  test_packaging.py  test_redactor.py  test_restore.py  test_scanner.py  test_skill_cli_contract.py  test_skill_docs.py  test_skill_manifest.py
