[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reversible-redaction"
version = "0.1.0"
description = "Local reversible document redaction pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LuckyDog" }]
dependencies = []
urls = { Homepage = "https://github.com/LuckyDogzyc/reversible-redaction", Repository = "https://github.com/LuckyDogzyc/reversible-redaction" }

[project.scripts]
reversible-redaction = "reversible_redaction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
